# yasgi

./: README.md  codecov.yml  mypy.ini  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: lint.yml  release.yml  test.yaml
scripts/: lint.sh  test.sh  test_html.sh
tests/: conftest.py  test_cookies.py  test_get.py  test_headers.py  test_init.py  test_options.py  test_post.py  test_redirect.py  test_version.py
yasgi/: __init__.py  asgi.py  exceptions.py  requests.py  responses.py  routing.py
